# pillow-jpls

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.md  README.md  conanfile.py  conanfile.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_deploy.yml  profiling.yml  scikit_build.yml
app/: CMakeLists.txt  main.cpp
cmake/: conan_provider.cmake
include/sample/: version.hpp
pillow_jpls/: __init__.py  jpls_image_decoder.py  jpls_image_encoder.py  jpls_image_file.py
scripts/: latest_commits.sh
src/: .clang-format  CMakeLists.txt  pycharls.cpp
src/core/: version.cpp
test/: conftest.py  test_conformance.py  test_image_formats.py  test_profile.py  test_roundtrip.py
test/core/: CMakeLists.txt  main.cpp  test_version.cpp
test/data/: .gitattributes  T16E0.JLS  T16E3.JLS  T8C0E0.JLS  T8C0E3.JLS  T8C1E0.JLS  T8C1E3.JLS  T8C2E0.JLS  T8C2E3.JLS  T8NDE0.JLS  T8NDE3.JLS  T8SSE0.JLS  T8SSE3.JLS
